ecs-cloudformation/ecs.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CloudFormation template to create a new VPC or use an existing VPC for ECS deployment
Mappings:
  VpcCidrs:
    eu-central-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    sa-east-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    ap-northeast-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    eu-west-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    us-east-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    us-west-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    us-west-2:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    ap-southeast-2:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
    ap-southeast-1:
      vpc: 10.0.0.0/16
      pubsubnet1: 10.0.0.0/24
      pubsubnet2: 10.0.1.0/24
  EcsAmiIds:
    ap-northeast-1:
      id: ami-8aa61c8a
    ap-southeast-2:
      id: ami-5ddc9f67
    eu-west-1:
      id: ami-2aaef35d
    us-east-1:
      id: ami-b540eade
    us-west-1:
      id: ami-5721df13
    us-west-2:
      id: ami-cb584dfb
Parameters:
  EcsInstanceType:
    Type: String
    Description: ECS EC2 instance type
    Default: t2.micro
    AllowedValues:
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    - m4.large
    - m4.xlarge
    - m4.2xlarge
    - m4.4xlarge
    - m4.10xlarge
    - m3.medium
    - m3.large
    - m3.xlarge
    - m3.2xlarge
    - c4.large
    - c4.xlarge
    - c4.2xlarge
    - c4.4xlarge
    - c4.8xlarge
    - c3.large
    - c3.xlarge
    - c3.2xlarge
    - c3.4xlarge
    - c3.8xlarge
    - r3.large
    - r3.xlarge
    - r3.2xlarge
    - r3.4xlarge
    - r3.8xlarge
    - i2.xlarge
    - i2.2xlarge
    - i2.4xlarge
    - i2.8xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  KeyName:
    Type: String
    Description: Optional - Name of an existing EC2 KeyPair to enable SSH access to the ECS instances
    Default: ''
  VpcId:
    Type: String
    Description: Optional - VPC Id of existing VPC. Leave blank to have a new VPC created
    Default: ''
    AllowedPattern: "^(?:vpc-[0-9a-f]{8}|)$"
    ConstraintDescription: VPC Id must begin with 'vpc-' or leave blank to have a new VPC created
  SubnetIds:
    Type: CommaDelimitedList
    Description: Optional - Comma separated list of existing VPC Subnet Ids where ECS instances will run
    Default: ''
  AsgDesiredSize:
    Type: Number
    Description: Initial Desired Capacity of ECS Auto Scaling Group
    Default: '6'
  EcsClusterName:
    Type: String
    Description: ECS Cluster Name
    Default: default
  EcsPort:
    Type: String
    Description: Optional - Security Group port to open on ECS instances - defaults to port 80
    Default: '80'
  ElbPort:
    Type: String
    Description: Optional - Security Group port to open on ELB - port 80 will be open by default
    Default: '80'
  ElbProtocol:
    Type: String
    Description: Optional - ELB Protocol - defaults to HTTP
    Default: HTTP
  ElbHealthCheckTarget:
    Type: String
    Description: Optional - Health Check Target for ELB - defaults to HTTP:80/
    Default: HTTP:80/
  SourceCidr:
    Type: String
    Description: Optional - CIDR/IP range for EcsPort and ElbPort - defaults to 0.0.0.0/0
    Default: 0.0.0.0/0
  EcsEndpoint:
    Type: String
    Description: 'Optional : ECS Endpoint for the ECS Agent to connect to'
    Default: ''
  CreateElasticLoadBalancer:
    Type: String
    Description: 'Optional : When set to true, creates a ELB for ECS Service'
    Default: 'true'
  VpcAvailabilityZones:
    Type: CommaDelimitedList
    Description: 'Optional : Comma-delimited list of two VPC availability zones in which to create subnets'
    Default: ''
Conditions:
  CreateVpcResources:
    Fn::Equals:
    - Ref: VpcId
    - ''
  ExistingVpcResources:
    Fn::Not:
    - Fn::Equals:
      - Ref: VpcId
      - ''
  SetEndpointToECSAgent:
    Fn::Not:
    - Fn::Equals:
      - Ref: EcsEndpoint
      - ''
  CreateELBForExistingVpc:
    Fn::And:
    - Fn::Equals:
      - Ref: CreateElasticLoadBalancer
      - 'true'
    - Condition: ExistingVpcResources
  CreateELBForNewVpc:
    Fn::And:
    - Fn::Equals:
      - Ref: CreateElasticLoadBalancer
      - 'true'
    - Condition: CreateVpcResources
  CreateELB:
    Fn::Or:
    - Condition: CreateELBForExistingVpc
    - Condition: CreateELBForNewVpc
  CreateEC2LCWithKeyPair:
    Fn::Not:
    - Fn::Equals:
      - Ref: KeyName
      - ''
  CreateEC2LCWithoutKeyPair:
    Fn::Equals:
    - Ref: KeyName
    - ''
  UseSpecifiedVpcAvailabilityZones:
    Fn::Not:
    - Fn::Equals:
      - Fn::Join:
        - ''
        - Ref: VpcAvailabilityZones
      - ''
Resources:
  Vpc:
    Condition: CreateVpcResources
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Fn::FindInMap:
        - VpcCidrs
        - Ref: AWS::Region
        - vpc
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
  PubSubnetAz1:
    Condition: CreateVpcResources
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      CidrBlock:
        Fn::FindInMap:
        - VpcCidrs
        - Ref: AWS::Region
        - pubsubnet1
      AvailabilityZone:
        Fn::If:
        - UseSpecifiedVpcAvailabilityZones
        - Fn::Select:
          - '0'
          - Ref: VpcAvailabilityZones
        - Fn::Select:
          - '0'
          - Fn::GetAZs:
              Ref: AWS::Region
  PubSubnetAz2:
    Condition: CreateVpcResources
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      CidrBlock:
        Fn::FindInMap:
        - VpcCidrs
        - Ref: AWS::Region
        - pubsubnet2
      AvailabilityZone:
        Fn::If:
        - UseSpecifiedVpcAvailabilityZones
        - Fn::Select:
          - '1'
          - Ref: VpcAvailabilityZones
        - Fn::Select:
          - '1'
          - Fn::GetAZs:
              Ref: AWS::Region
  InternetGateway:
    Condition: CreateVpcResources
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    Condition: CreateVpcResources
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc
      InternetGatewayId:
        Ref: InternetGateway
  RouteViaIgw:
    Condition: CreateVpcResources
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
  PublicRouteViaIgw:
    Condition: CreateVpcResources
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RouteViaIgw
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  PubSubnet1RouteTableAssociation:
    Condition: CreateVpcResources
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PubSubnetAz1
      RouteTableId:
        Ref: RouteViaIgw
  PubSubnet2RouteTableAssociation:
    Condition: CreateVpcResources
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PubSubnetAz2
      RouteTableId:
        Ref: RouteViaIgw
  ElbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ELB Allowed Ports
      VpcId:
        Fn::If:
        - CreateVpcResources
        - Ref: Vpc
        - Ref: VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort:
          Ref: ElbPort
        ToPort:
          Ref: ElbPort
        CidrIp:
          Ref: SourceCidr
  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Allowed Ports
      VpcId:
        Fn::If:
        - CreateVpcResources
        - Ref: Vpc
        - Ref: VpcId
      SecurityGroupIngress:
        Fn::If:
        - CreateELB
        - - IpProtocol: tcp
            FromPort:
              Ref: EcsPort
            ToPort:
              Ref: EcsPort
            CidrIp:
              Ref: SourceCidr
          - IpProtocol: tcp
            FromPort: '1'
            ToPort: '65535'
            SourceSecurityGroupId:
              Ref: ElbSecurityGroup
        - - IpProtocol: tcp
            FromPort:
              Ref: EcsPort
            ToPort:
              Ref: EcsPort
            CidrIp:
              Ref: SourceCidr
  EcsElasticLoadBalancer:
    Condition: CreateELBForNewVpc
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      SecurityGroups:
      - Ref: ElbSecurityGroup
      Subnets:
      - Ref: PubSubnetAz1
      - Ref: PubSubnetAz2
      CrossZone: 'true'
      Listeners:
      - LoadBalancerPort:
          Ref: ElbPort
        InstancePort:
          Ref: EcsPort
        Protocol:
          Ref: ElbProtocol
      HealthCheck:
        Target:
          Ref: ElbHealthCheckTarget
        HealthyThreshold: '2'
        UnhealthyThreshold: '10'
        Interval: '30'
        Timeout: '5'
  EcsElasticLoadBalancerExistingVpc:
    Condition: CreateELBForExistingVpc
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      SecurityGroups:
      - Ref: ElbSecurityGroup
      Subnets:
        Ref: SubnetIds
      CrossZone: 'true'
      Listeners:
      - LoadBalancerPort:
          Ref: ElbPort
        InstancePort:
          Ref: EcsPort
        Protocol:
          Ref: ElbProtocol
      HealthCheck:
        Target:
          Ref: ElbHealthCheckTarget
        HealthyThreshold: '2'
        UnhealthyThreshold: '10'
        Interval: '30'
        Timeout: '5'
  EcsInstanceLc:
    Condition: CreateEC2LCWithKeyPair
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        Fn::FindInMap:
        - EcsAmiIds
        - Ref: AWS::Region
        - id
      InstanceType:
        Ref: EcsInstanceType
      AssociatePublicIpAddress: true
      IamInstanceProfile:
        Ref: EcsInstanceProfile
      KeyName: !Ref 'KeyName'
      SecurityGroups:
      - Ref: EcsSecurityGroup
      UserData:
        Fn::If:
        - SetEndpointToECSAgent
        - Fn::Base64: !Sub |
          #!/bin/bash
          echo ECS_CLUSTER=${EcsClusterName} >> /etc/ecs/ecs.config
          echo ECS_BACKEND_HOST=${EcsEndpoint} >> /etc/ecs/ecs.config
        - Fn::Base64: !Sub |
          #!/bin/bash
          echo ECS_CLUSTER=${EcsClusterName} >> /etc/ecs/ecs.config
  EcsInstanceLcWithoutKeyPair:
    Condition: CreateEC2LCWithoutKeyPair
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !FindInMap [EcsAmiIds, !Ref 'AWS::Region', id]
      InstanceType:
        Ref: EcsInstanceType
      AssociatePublicIpAddress: true
      IamInstancProfile:
        Ref: EcsInstanceProfile
      SecurityGroups:
      - Ref: EcsSecurityGroup
      UserData:
        Fn::If:
        - SetEndpointToECSAgent
        - Fn::Base64:
            Fn::Join:
            - ''
            - - "#!/bin/bash\n"
              - echo ECS_CLUSTER=
              - Ref: EcsClusterName
              - " >> /etc/ecs/ecs.config"
              - |2-

                echo ECS_BACKEND_HOST=
              - Ref: EcsEndpoint
              - " >> /etc/ecs/ecs.config"
        - Fn::Base64:
            Fn::Join:
            - ''
            - - "#!/bin/bash\n"
              - echo ECS_CLUSTER=
              - Ref: EcsClusterName
              - " >> /etc/ecs/ecs.config"
  EcsInstanceAsg:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LoadBalancerNames:
        Fn::If:
        - CreateELBForNewVpc
        - - Ref: EcsElasticLoadBalancer
        - - Ref: EcsElasticLoadBalancerExistingVpc
      AvailabilityZones:
        Fn::If:
        - UseSpecifiedVpcAvailabilityZones
        - - Fn::Select:
            - '0'
            - Ref: VpcAvailabilityZones
          - Fn::Select:
            - '1'
            - Ref: VpcAvailabilityZones
        - - Fn::Select:
            - '0'
            - Fn::GetAZs:
                Ref: AWS::Region
          - Fn::Select:
            - '1'
            - Fn::GetAZs:
                Ref: AWS::Region
      VPCZoneIdentifier:
        Fn::If:
        - CreateVpcResources
        - - Fn::Join:
            - ","
            - - Ref: PubSubnetAz1
              - Ref: PubSubnetAz2
        - Ref: SubnetIds
      LaunchConfigurationName:
        Fn::If:
        - CreateEC2LCWithKeyPair
        - Ref: EcsInstanceLc
        - Ref: EcsInstanceLcWithoutKeyPair
      MinSize: '1'
      MaxSize: '10'
      DesiredCapacity:
        Ref: AsgDesiredSize
      Tags:
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - 'ECS Instance - '
            - Ref: AWS::StackName
        PropagateAtLaunch: 'true'
  EcsInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: EcsInstanceRole
  EcsInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2008-10-17'
        Statement:
        - Action: sts:AssumeRole
          Principal:
            Service: ec2.amazonaws.com
          Effect: Allow
          Sid: ''
      Path: "/"
      Policies:
      - PolicyName: EcsInstance
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Action:
            - ecs:CreateCluster
            - ecs:DeregisterContainerInstance
            - ecs:DiscoverPollEndpoint
            - ecs:Poll
            - ecs:RegisterContainerInstance
            - ecs:StartTelemetrySession
            - ecs:Submit*
            Resource:
            - "*"
          - Effect: Allow
            Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            - logs:DescribeLogStreams
            Resource:
            - arn:aws:logs:*:*:*
Outputs:
  EcsInstanceAsgName:
    Description: Auto Scaling Group Name for ECS Instances
    Value:
      Ref: EcsInstanceAsg
  EcsElbName:
    Description: Load Balancer for ECS Service
    Value:
      Fn::If:
      - CreateELB
      - Fn::If:
        - CreateELBForNewVpc
        - Ref: EcsElasticLoadBalancer
        - Ref: EcsElasticLoadBalancerExistingVpc
      - ''
